Update layout math to an ellipse to prevent cards from overlapping vertically

--- a/wp-content/themes/dayservice-sample/style.css
+++ b/wp-content/themes/dayservice-sample/style.css
@@ -1262,8 +1262,8 @@ textarea.form-control {
 
 .yearly-circle {
     position: relative;
-    width: 700px;
-    height: 700px;
+    width: 800px;
+    height: 650px;
     margin: 0 auto;
     border-radius: 50%;
     border: 3px dashed rgba(249, 115, 22, 0.2);
@@ -1271,10 +1271,10 @@ textarea.form-control {
 
 .circle-item {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: calc(50% - (var(--y) * 325px));
+    left: calc(50% + (var(--x) * 400px));
     width: 160px;
-    transform: translate(-50%, -50%) rotate(var(--deg)) translateY(-350px) rotate(calc(var(--deg) * -1));
+    transform: translate(-50%, -50%);
     z-index: 10;
 }
 
